--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Changed .header to header */
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,14 +17,22 @@ header {
     color: #ffffff;
 }
 
+/* Changed .header h1 to h1 */
+
 h1 {
     display: inline-block;
     font-size: 48px;
 }
 
+/* Changed .header h1 .seo to h1 .seo */
+
 h1 .seo {
     color: #d9dcd6;
 }
+
+/* Changed .header div to nav */
+/* Moved list-style-type:none from .header div ul to nav */
+/* Deleted .header div ul */
 
 nav {
     padding-top: 15px;
@@ -33,6 +43,8 @@ nav {
     list-style-type: none;
 }
 
+/* Changed .header div ul li to li */
+
 li {
     display: inline-block;
     margin-left: 25px;
@@ -42,6 +54,8 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+
+/* Moved .float-left and .float-right to this location to follow semantic structure*/
 
 .float-left {
     float: left;
@@ -72,6 +86,8 @@ p {
     margin-left: 20px;
 }
 
+/* Consolidated .search-engine-optimization, .online-reputation-management, and .social-media-marketing in .content article */
+
 .content article {
     margin-bottom: 20px;
     padding: 50px;
@@ -81,9 +97,13 @@ p {
     color: #ffffff;
 }
 
+/* Consolidated .search-engine-optimization img, .online-reputation-management img, and .social-media-marketing img in .content img */
+
 .content img {
     max-height: 200px;
 }
+
+/* Consolidated .search-engine-optimization h2, .online-reputation-management h2, and .social-media-marketing h2 in h2 */
 
 h2 {
     margin-bottom: 20px;
@@ -101,10 +121,14 @@ h2 {
     background-color: #2589bd;
 }
 
+/* Consolidated .benefit-lead, .benefit-brand, and .benefit-cost in .benefits article */
+
 .benefits article {
     margin-bottom: 32px;
     color: #ffffff;
 }
+
+/* Consolidated .benefit-lead img, .benefit-brand img, and .benefit-cost img in .benefits img */
 
 .benefits img {
     display: block;
@@ -112,10 +136,14 @@ h2 {
     max-width: 150px;
 }
 
+/* Consolidated .benefit-lead h3, .benefit-brand h3, and .benefit-cost h3 in h3 */
+
 h3 {
     margin-bottom: 10px;
     text-align: center;
 }
+
+/* Changed .footer to footer */
 
 footer {
     padding: 30px;
@@ -123,6 +151,8 @@ footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+
+/* Changed .footer h2 to h4 */
 
 h4 {
     font-size: 20px;
